Create Button Scroll To Top But Not Complited

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,8 @@
     box-sizing: border-box !important;
     font-family: 'Cairo', sans-serif !important;
 }
+
+body{
+    position: relative;
+    height: 1000px;
+}
