--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
 
 footer {
     background-color: $Dark-Color;
+    margin-top: 18px;
     .contact-us {
         @media screen and (max-width: 768px) {
             .content {
